Fixed layout issues

--- a/style.css
+++ b/style.css
@@ -595,8 +595,7 @@ span {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid var(--main-color);
-  border-radius: 5px;
+  margin-top: 1rem;
 }
 
 .icon-box i{
